[project]
name = "Cimoc2Moe"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
	"E",    
	"F",    
	"I",    
	"B",    
	"C4",   
	"UP",   
	"RUF",  
	"SIM",  
	"Q"     
]

preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"